<resources>
    <string name="app_name">CryptoMax</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="cap">Cap</string>
    <string name="balance">Balance</string>
    <string name="value">Value</string>
    <string name="currency">Currency</string>
    <string name="transactions">Transactions</string>
    <string name="amount">Amount</string>
    <string name="from_to">From/To</string>
    <string name="add_scan_address">Scan the QR code for your wallet\'s address. Make sure it\'s not the private key.</string>
    <string name="or">Or</string>
    <string name="generate_a_wallet">Generate a Wallet</string>
    <string name="type">Type:</string>
    <string name="wallet_name">Wallet Name:</string>
    <string name="address">Address</string>
    <string name="day_change">Day Change</string>
    <string name="market_cap">Market Cap</string>
    <string name="add">Add</string>
    <string name="my_wallets">My Wallets</string>
    <string name="send">Send</string>
    <string name="base_currency">Currency</string>
    <string name="daily_change">Daily Change</string>
    <string name="okay">Okay</string>
    <string name="network_error">Network Error</string>
    <string name="network_message">The network has encountered an error. Please try again in a moment.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_address">From Address</string>
    <string name="to_address">To Address</string>
    <string name="date">Date</string>
    <string name="transaction">Transaction</string>
    <string name="send_from">Send From</string>
    <string name="scanning_error">Scanning Error</string>
    <string name="bad_address_message">Please make sure you are scanning the ADDRESS for a Bitcoin, Ethereum, or Ripple wallet</string>
    <string name="same_address_message">You\'ve already added a wallet with that address. Please try another QR code.</string>
    <string name="add_a_wallet">Add a wallet</string>
    <string name="send_scan_address">Scan the QR code of the wallet you want to send to</string>
    <string name="contacts">Contacts</string>
    <string name="memo">Memo</string>
    <string name="pair">Pair</string>
    <string name="exchange">Exchange</string>
    <string name="price_in">Price in</string>
    <string name="volume_1d">24hr volume</string>
    <string name="change_1h">% 1h change</string>
    <string name="change_1d">% 24h change</string>
    <string name="change_7d">% 7d change</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="mineable">Mineable</string>
    <string name="simple_moving_average">Simple Moving Average</string>
    <string name="exponential_moving_average">Exponential Moving Average</string>
    <string name="bollinger_bands">Bollinger Bands</string>
    <string name="parabolic_sar">Parabolic SAR</string>
    <string name="underlay">Underlay</string>
    <string name="relative_strength_index">Relative Strength Index</string>
    <string name="volume">Volume</string>
    <string name="next">Next</string>
    <string name="add_a_name">Add a Name</string>
    <string name="add_private_key">Add Private Key</string>
    <string name="add_scan_key">Scan the QR code for your wallet\'s private key. Make sure it\'s not the wallet address.</string>
    <string name="skip">Skip</string>
    <string name="choose_a_contact">Choose a contact</string>
    <string name="markets">Markets</string>
    <string name="wallets">Wallets</string>
    <string name="tutorial">Tutorial</string>
    <string name="settings">Settings</string>
    <string name="default_str">Default</string>
    <string name="dracula">Dracula</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_closed">Drawer closed</string>
    <string name="parsing_candles">Parsing Candles...</string>
    <string name="trash">Trash</string>
    <string name="edit">Edit</string>
    <string name="qr_code">QR Code</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="menu">Menu</string>
    <string name="assets">Assets</string>
    <string name="show_price_flash">Show Price Flash</string>
    <string name="fee">Fee</string>
    <string name="total_cost">Total Cost</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="send_title_1">Step 1: Add Recipient</string>
    <string name="send_title_2">Step 2: Set Amount</string>
    <string name="send_title_3">Step 3: Authenticate</string>
    <string name="send_title_4">Step 4: Confirmation</string>
    <string name="to_recipient">To Recipient</string>
    <string name="zero">0.00</string>
    <string name="news">News</string>
    <string name="times">Times</string>
    <string name="abs_1h">Abs 1h</string>
    <string name="abs_1d">Abs 1d</string>
    <string name="abs_7d">Abs 7d</string>
    <string name="all">All</string>
    <string name="following">Following</string>
    <string name="add_contact">Add Contact</string>
    <string name="arrow"><![CDATA[-->]]></string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="change">Change</string>
    <string name="profile">Profile</string>
    <string name="remove">Remove</string>
    <string name="theme">Theme</string>
    <string name="unfollow_msg">You are no longer following</string>
    <string name="follow_msg">You are now following</string>
    <string name="headline">Headline</string>
    <string name="author">Author</string>
    <string name="body">Body</string>
    <string name="vote_error">Unable to cast vote</string>
    <string name="up_vote_message">You\'ve up voted this article</string>
    <string name="vote_removed_message">You\'ve removed your vote for this article</string>
    <string name="down_vote_message">You\'ve down voted this article</string>
    <string name="views">Views</string>
    <string name="votes">Votes</string>
    <string name="chart_type">Chart Type</string>
    <string name="you">You</string>
    <string name="contact_scan_address">Scan the QR code for the contact\'s wallet address. Make sure it\'s not the private key.</string>
    <string name="add_a_contact">Add a contact</string>
    <string name="same_contact_message">You\'ve already added a contact with that address. Please try another QR code.</string>
    <string name="private_key">Private Key</string>
    <string name="general">General</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_fingerprint">Change Fingerprint</string>
    <string name="choose_a_password">Choose a Password</string>
    <string name="encrypt_title">Secure your private key with the methods below</string>
    <string name="password_length">At least 8 characters long</string>
    <string name="password_upper">One uppercase letter</string>
    <string name="password_lower">One lowercase letter</string>
    <string name="password_number">One number</string>
    <string name="no_wallets_message">You have no wallets! Add one quick before anyone sees</string>
    <string name="wallet_name_2">Wallet Name</string>
    <string name="add_name_message">You must add a name for your wallet.</string>
    <string name="bad_private_key_message">The item scanned isn\'t a private key. Please scan a private key QR code.</string>
    <string name="private_key_mismatch_message">That is not the correct private key for this wallet.</string>
    <string name="password_mismatch">The passwords don\'t match</string>
    <string name="fingerprint_instructions">Please place your fingertip on your device\'s fingerprint scanner</string>
    <string name="fingerprint_title">Fingerprint Authentication</string>
    <string name="fingerprint_device_not_supported">This device does not support fingerprint authentication</string>
    <string name="no_fingerprints_added">To use fingerprint authentication, you must register a fingerprint in your device\'s settings</string>
    <string name="fingerprint_supported">For extra security, you can add fingerprint authentication to this wallet. This is optional</string>
    <string name="wrong_fingerprint">Please use the same fingerprint that is saved in your device\'s settings</string>
    <string name="enable_lock_screen_security">Please enable lock screen security in your device\'s settings</string>
    <string name="finish">Finish</string>
    <string name="no_contacts_message">You have no contacts! Add one before you get too lonely</string>
    <string name="anonymous">Anonymous</string>
    <string name="too_many_requests_error">Too many requests</string>
    <string name="too_many_requests_message">You\'ve made too many requests. Please wait a minute and try again.</string>
    <string name="me">Me</string>
    <string name="choose_a_currency">Choose a Currency</string>
    <string name="email_authentication">Email Authentication</string>
    <string name="email_description">For extra security, you can add email authentication to this wallet. This is optional</string>
    <string name="example_email">someone@example.com</string>
    <string name="code">6-Digit Code</string>
    <string name="email_instructions">A 6-digit pin code has been sent to the provided email address. Please enter it here:</string>
    <string name="back">Back</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="email_sent">Email sent</string>
    <string name="incorrect_code">That is not the correct code</string>
    <string name="unable_to_add_wallet">Unable to add wallet. Please try again</string>
    <string name="set_image_failure">Failed to set profile picture. Please try again</string>
    <string name="remove_wallet_failure">Failed to remove wallet. Please try again</string>
    <string name="remove_image_failure">Failed to remove profile picture. Please try again</string>
    <string name="set_name_failure">Failed to remove profile picture. Please try again</string>
    <string name="send_email_failure">Failed to send email. Please try again</string>
    <string name="send_email_success">Email sent</string>
    <string name="password_must_set">You must set a password for this wallet</string>
    <string name="private_key_agreement_header_1">1. What\'s a private key?</string>
    <string name="private_key_agreement_body_1">
        The wallet that you are about to create has what\'s called a private key. This private key is a long string of characters, and is required to make
        transactions with the wallet. The wallet also has what\'s called an address. This address is what others use to send funds to you.
    </string>
    <string name="private_key_agreement_header_2">2. Private key safety</string>
</resources>